--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "url": ""
   },
   "scripts": {
-    "start": "node_modules/.bin/webpack-dev-server",
-    "build": "node_modules/.bin/webpack"
+    "start": "node_modules/.bin/webpack-dev-server --hot --host 0.0.0.0",
+	"build": "node_modules/.bin/webpack --progress --profile --colors",
+	"build:dist": "node_modules/.bin/webpack --config ./webpack.prod.config.js --progress --profile --colors"
   },
   "dependencies": {
     "babel-polyfill": "^6.9.1",
-    "react": "15.4.2",
-    "react-dom": "15.4.2"
+    "react": "15.1.0",
+    "react-dom": "15.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
@@ -32,6 +33,7 @@
     "node-sass": "^3.7.0",
     "postcss-loader": "^0.9.1",
     "react-mdi": "^0.5.7",
+    "react-router": "^3.0.2",
     "react-tap-event-plugin": "^2.0.1",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
