--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   },
   "scripts": {
     "start": "node_modules/.bin/webpack-dev-server --hot --host 0.0.0.0",
-	"build": "node_modules/.bin/webpack --progress --profile --colors",
-	"build:dist": "node_modules/.bin/webpack --config ./webpack.prod.config.js --progress --profile --colors"
+    "build": "node_modules/.bin/webpack --progress --profile --colors",
+    "build:dist": "node_modules/.bin/webpack --config ./webpack.prod.config.js --progress --profile --colors"
   },
   "dependencies": {
     "babel-polyfill": "^6.9.1",
-    "react": "15.1.0",
-    "react-dom": "15.1.0"
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-tap-event-plugin": "^2.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
